--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<head>
-  <meta http-equiv="refresh" content="; URL=https://siyuhan.shinyapps.io/TIGER_Supp_Fig/" />
-</head>
-<body>
-  <p>If you are not redirected, <a href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">click here</a>.</p>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to TIGER's dynamic website</title>
+<meta http-equiv="refresh" content="0; URL=https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
+<link rel="canonical" href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
 
-  <p>It may take several seconds to initialise the shiny app and load the data.</p>
+
+<body>
+  <h2>If you are not redirected, <a href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">click here</a>.</p>
+
+  <h3>After redirection, it may take several seconds to initialise the shiny app and load the data.</p>
 </body>
