--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 
 <body>
+  <h2>Thank you for using TIGER. Now you are redirecting to our dynamic website.</p>
+
   <h2>If you are not redirected, <a href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">click here</a>.</p>
 
   <h3>After redirection, it may take several seconds to initialise the shiny app and load the data.</p>
