--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to TIGER's dynamic website</title>
-<meta http-equiv="refresh" content="0; URL=https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
-<link rel="canonical" href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
 
+</head>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R9ZXEP7443"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-R9ZXEP7443');
+	</script>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>TIGER - Dynamic Website</title>
+	<meta charset="utf-8">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+	<title>Redirecting to TIGER's dynamic website</title>
+	<meta http-equiv="refresh" content="0; URL=https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
+	<link rel="canonical" href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.png" media="screen" />
+
+	<style type="text/css">
+
+	</style>
+
+</head>
 
 <body>
-  <h2>Thank you for using TIGER. Now you are redirecting to our dynamic website.</p>
 
-  <h2>If you are not redirected, <a href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">click here</a>.</p>
+  <div class="container">
 
-  <h3>After redirection, it may take several seconds to initialise the shiny app and load the data.</p>
+    <div class="panel panel-success" style="width: 90%; margin-left:4%; margin-top:20px;">
+                <div class="panel-heading">
+                    <h2 class="panel-title" style="font-size:19px; text-align:center">Thank you for using TIGER!</h3>
+                </div>
+
+                <div class="panel-body" style="font-size:19px; line-height:180%; text-align:center">      
+			<h3>Now you are redirecting to our dynamic website.</p>
+			<h3>If you are not redirected, <a href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">click here</a>.</p>
+			<h5></br>After redirection, it may take several seconds to initialise the shiny app and load the data.</p>
+                </div>
+    </div>
+
+  </div>
+
 </body>
