--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<title>Redirecting to TIGER's dynamic website</title>
 	<meta http-equiv="refresh" content="0; URL=https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
-	<link rel="canonical" href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">
+	<link rel="canonical" href="https://han-siyu.shinyapps.io/TIGER_web/">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.png" media="screen" />
 
 	<style type="text/css">
@@ -42,7 +42,7 @@
 
                 <div class="panel-body" style="font-size:19px; line-height:180%; text-align:center">      
 			<h3>Now you are redirecting to our dynamic website.</p>
-			<h3>If you are not redirected, <a href="https://siyuhan.shinyapps.io/TIGER_Supp_Fig/">click here</a>.</p>
+			<h3>If you are not redirected, <a href="https://han-siyu.shinyapps.io/TIGER_web/">click here</a>.</p>
 			<h5></br>After redirection, it may take several seconds to initialise the shiny app and load the data.</p>
                 </div>
     </div>
