--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="panel-body" style="font-size:19px; line-height:180%; text-align:center">      
 			<h3>Now you are redirecting to our dynamic website.</p>
 			<h3>If you are not redirected, <a href="https://han-siyu.shinyapps.io/TIGER_web/">click here</a>.</p>
-			<h5></br>After redirection, it may take several seconds to initialise the shiny app and load the data.</p>
+			<h5></br>After redirection, it may take several seconds to initialise the shiny app and load the data. Please note that this website does not support mobile devices.</p>
                 </div>
     </div>
 
